<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/active_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context="com.redray.khadoomhome.all_users.Activites.Lang_Choose_activity">


    <include
        layout="@layout/header_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.3"
        android:background="@color/gray_light">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            app:cardElevation="15dp"
            card_view:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_activition_code"
                    android:textColor="@color/textbox_gray"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/you_will_receive_an_activation_code"
                    android:textColor="@color/textbox_gray"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/active_mobile_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@color/textbox_gray"
                    android:gravity="start"
                    android:inputType="number"
                    android:padding="10dp"
                    android:textColor="@color/white_one"
                    android:textColorHint="@color/textbox_gray"
                    android:textSize="@dimen/text_default" />


                <Button
                    android:id="@+id/actvit_account_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_blue"
                    android:paddingEnd="50dp"
                    android:paddingStart="50dp"
                    android:text="@string/active"
                    android:textColor="@color/white_one"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/if_you_donot_receive_forgot"
                    android:textColor="@color/textbox_gray"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/resend_activition_clk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/click_here"
                    android:textColor="@color/dark_blue"
                    android:textSize="17sp"
                    android:textStyle="bold" />


            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>


</LinearLayout>
