<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_add_part_lay"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginStart="5dp"
    android:layout_marginTop="5dp"
    android:background="@drawable/dialog_terms_background"
    android:orientation="vertical"
    android:weightSum="3">


    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="10dp"
        app:cardElevation="15dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/trans_broder"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1.5"
                android:gravity="center"
                android:text="@string/parts_new_works"
                android:textSize="15sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="0.7"
                android:gravity="center"
                android:text="@string/quantity"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="0.4"
                android:gravity="center"
                android:text="@string/cost"
                android:textSize="15sp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/total_without"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>


    </android.support.v7.widget.CardView>


    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:weightSum="3">


        <EditText
            android:id="@+id/name_part_edt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:layout_weight="1.5"
            android:background="@color/gray_light"
            android:gravity="start"
            android:hint="@string/add_part_name"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/light_blue"
            android:textColorHint="@color/textbox_gray"
            android:textSize="@dimen/text_default" />


        <ImageButton
            android:id="@+id/min_qty_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.2"
            android:background="@drawable/min_qty"
            android:contentDescription="@string/app_name" />


        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.3"
            app:cardCornerRadius="5dp"
            app:cardElevation="15dp">

            <TextView
                android:id="@+id/quantity_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:maxLength="3"
                android:maxLines="1"
                android:padding="3dp"
                android:text="1"
                android:textColor="@color/red_light"
                android:textSize="12sp" />

        </android.support.v7.widget.CardView>


        <ImageButton
            android:id="@+id/plus_qty_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_weight="0.2"
            android:background="@drawable/pls_qty"
            android:contentDescription="@string/app_name"/>


        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.4"
            app:cardCornerRadius="5dp"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <EditText
                android:id="@+id/unit_cost_edt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:inputType="number"
                android:maxLength="3"
                android:maxLines="1"
                android:padding="3dp"
                android:textColor="@color/red_light"
                android:textSize="12sp" />

        </android.support.v7.widget.CardView>


        <TextView
            android:id="@+id/total_unit_cost_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:layout_weight="0.4"
            android:maxLines="1"
            android:padding="3dp"
            android:gravity="center"
            android:text="0"
            android:textColor="@color/red_light"
            android:textSize="12sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_weight="2"
        android:gravity="center">


        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_red"
            android:paddingEnd="30dp"
            android:paddingStart="30dp"
            android:text="@string/cancel"
            android:textColor="@color/white_one"
            android:textSize="@dimen/text_default" />

        <Button
            android:id="@+id/add_part_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/button_blue"
            android:paddingEnd="30dp"
            android:paddingStart="30dp"
            android:text="@string/add"
            android:textColor="@color/white_one"
            android:textSize="@dimen/text_default" />


    </LinearLayout>


</LinearLayout>