<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ticket_details_lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.redray.khadoomhome.tickets.Activities.Ticket_details">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/replies_recycle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_light"
        android:layout_above="@+id/send_layout" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:id="@+id/send_layout">

        <ImageView
            android:id="@+id/uplod_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/upload_img"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name" />

        <EditText
            android:id="@+id/text_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/uplod_img"
            android:layout_centerInParent="true"
            android:background="@android:color/white"
            android:gravity="start"
            android:hint="@string/reply"
            android:padding="10dp"
            android:textColor="@color/light_blue"
            android:textColorHint="@color/textbox_gray"
            android:textSize="@dimen/text_default"
            android:layout_toStartOf="@+id/send_btn"
            android:inputType="textMultiLine"
            android:minLines="1"
            android:maxLines="10" />


        <ImageView
            android:id="@+id/send_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:background="@drawable/send_button" />


        <TextView
            android:id="@+id/ticket_closed_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ticket_is_closed"
            android:textColor="@color/dark_blue"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:visibility="gone"/>

    </RelativeLayout>




</RelativeLayout>
